# src/components/block/block.router.ts
@@ -12,5 +12,5 @@ const router: Router = Router();
 router.get('/block/number/:number', readBlock);
 router.get('/block/hash/:hash', readBlockByHash);
 router.get('/block/latestBlockList', getLatestBlockList);
-router.get('/block/BlockList/:pageNumber', readBlockPage);
+router.get('/block/blockList/:pageNumber', readBlockPage);
 export default router;
